Add dynamic quote changer + minor improvements

--- a/index.html
+++ b/index.html
@@ -104,32 +104,34 @@
 		<hr>
 		<div class="row">
 			<div class="span6">
-				<img class="screenshot" src="site/img/screenshot.png" width="558" height="246" alt="Todo app screenshot">
-				<p class="tagline2">TodoMVC is a common learning application for popular JavaScript MV* frameworks</p>
+				<h2>Thoughts on the project</h2>
+				<blockquote class="quote speech-bubble">
+					<p></p>
+					<footer>
+						<img width="40" height="40" alt="">
+						<a></a>
+					</footer>
+				</blockquote>
 			</div>
 			<div class="span6">
-				<h2>Title</h2>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+				<img class="screenshot" src="site/img/screenshot.png" width="558" height="246" alt="Todo app screenshot">
 			</div>
 		</div>
 		<hr>
 		<div class="row">
-			<div class="span4">
-				<h2>Thoughts on the project</h2>
-				<blockquote class="quote speech-bubble">
-					<p>Modern JavaScript developers realise an MVC framework is essential for managing the complexity of their apps. TodoMVC is a fabulous community contribution that helps developers compare frameworks on the basis of actual project code, not just claims and anecdotes.</p>
-					<footer>
-						<img src="http://gravatar.com/avatar/cabf735ce7b8b4471ef46ea54f71832d?s=40" width="40" height="40" alt="Michael Mahemoff">
-						<a href="https://github.com/mahemoff">Michael Mahemoff</a>
-					</footer>
-				</blockquote>
+			<div class="span3">
+				<h2>What's new in 1.0</h2>
+				<ul>
+					<li>lorem ipsum</li>
+					<li>lorem ipsum</li>
+					<li>lorem ipsum</li>
+					<li>lorem ipsum</li>
+					<li>lorem ipsum</li>
+					<li>lorem ipsum</li>
+					<li>lorem ipsum</li>
+				</ul>
 			</div>
-			<div class="span4">
+			<div class="span5">
 				<h2>Selecting a Framework</h2>
 				<p>Once you've downloaded the latest release and played around with the apps, you'll want to decide on a specific framework to try out.</p>
 				<p>Study the syntax required for defining models, views and (where applicable) controllers and classes in the frameworks you're interested in and try your hand at editing the code to see how it feels using it first-hand.</p>
@@ -149,7 +151,7 @@
 		<div class="row">
 			<div class="span12">
 				<h2>Labs</h2>
-				<ul class="applist labs">
+				<ul class="applist">
 					<li>
 						<a href="labs/architecture-examples/maria/src/" data-source="https://github.com/petermichaux/maria" data-content="An MVC framework for JavaScript applications. The real MVC. The Smalltalk MVC. The Gang of Four MVC. The three core design patterns of MVC (observer, composite, and strategy) are embedded in Maria's Model, View, and Controller objects. Other patterns traditionally included in MVC implementations (e.g. factory method and template) make appearances too.">Maria</a>
 					</li>
