--- a/architecture-examples/emberjs/index.html
+++ b/architecture-examples/emberjs/index.html
@@ -34,13 +34,13 @@
 	<script id="filtersTemplate" type="text/x-handlebars">
 		<ul id="filters">
 			<li>
-				<a {{action showAll href=true}}>All </a>
+				<a {{action showAll href=true}} {{bindAttr class="view.isAll:selected"}}>All</a>
 			</li>
 			<li>
-				<a {{action showActive href=true}}>Active</a>
+				<a {{action showActive href=true}} {{bindAttr class="view.isActive:selected"}}>Active</a>
 			</li>
 			<li>
-				<a {{action showCompleted href=true}}>Completed</a>
+				<a {{action showCompleted href=true}} {{bindAttr class="view.isCompleted:selected"}}>Completed</a>
 			</li>
 		</ul>
 	</script>
