Adding whats new in 1.0 content.

--- a/index.html
+++ b/index.html
@@ -122,13 +122,12 @@
 			<div class="span3">
 				<h2>What's new in 1.0</h2>
 				<ul>
-					<li>lorem ipsum</li>
-					<li>lorem ipsum</li>
-					<li>lorem ipsum</li>
-					<li>lorem ipsum</li>
-					<li>lorem ipsum</li>
-					<li>lorem ipsum</li>
-					<li>lorem ipsum</li>
+					<li>All main apps have been completely rewritten for consistency</li>
+					<li>Routing has been added to many of these</li>
+					<li>We now have 30 apps being worked on in Labs</li>
+					<li>We're using a kick-ass new template</li>
+					<li>Framework authors and contributors have been consulted to ensure our apps adhere to best practices</li>
+					<li>We're helping AMD users by adding AMD versions of many apps</li>
 				</ul>
 			</div>
 			<div class="span5">
