fixed typos: Todos -> todos on all index.html files in order to be consistent along the different demos

--- a/labs/architecture-examples/broke/index.html
+++ b/labs/architecture-examples/broke/index.html
@@ -7,7 +7,7 @@
 <body>
     <div id="views">
         <div id="tasks">
-            <h1>Todos</h1>
+            <h1>todos</h1>
 
             <form action="#/task/create/" method="post">
                 <input type="text" name="title" placeholder="What needs to be done?" />
