--- a/labs/architecture-examples/javascriptmvc/todo/todo/todo.html
+++ b/labs/architecture-examples/javascriptmvc/todo/todo/todo.html
@@ -6,7 +6,7 @@
 	</head>
 	<body>
 	    <div id='todos'>
-    		<h1>Todos</h1>
+    		<h1>todos</h1>
 			<input type='text' class='create'/>
 			<ul id='list'></ul>
 			<div id='todo-stats'>
