--- a/architecture-examples/backbone/index.html
+++ b/architecture-examples/backbone/index.html
@@ -10,7 +10,7 @@
 
 	<section id="todoapp">
 		<header id="header">
-			<h1>Todos</h1>
+			<h1>todos</h1>
 			<input id="new-todo" placeholder="What needs to be done?" autofocus>
 		</header>
 		<section id="main">
