--- a/dependency-examples/backbone_require/index.html
+++ b/dependency-examples/backbone_require/index.html
@@ -11,7 +11,7 @@
 
   <section id="todoapp">
     <header id="header">
-      <h1>Todos</h1>
+      <h1>todos</h1>
       <input id="new-todo" placeholder="What needs to be done?" autofocus>
     </header>
     <section id="main">
