--- a/labs/architecture-examples/canjs/yui-widget/index.html
+++ b/labs/architecture-examples/canjs/yui-widget/index.html
@@ -13,7 +13,7 @@
 <body class="yui3-skin-sam">
 	<div id="todoapp">
 		<header>
-			<h1>Todos</h1>
+			<h1>todos</h1>
 			<input id="new-todo" type="text" placeholder="What needs to be done?">
 		</header>
 	</div>
