--- a/labs/architecture-examples/epitome/index.html
+++ b/labs/architecture-examples/epitome/index.html
@@ -25,19 +25,19 @@
 	<footer id="info">
 		<p>Double-click to edit a todo</p>
 		<p>Created by <a href="https://github.com/DimitarChristoff/">Dimitar Christoff</a></p>
-                <p>Powered by <a href="https://github.com/DimitarChristoff/Epitome">Epitome for MooTools</a></p>
+        <p>Powered by <a href="https://dimitarchristoff.github.com/Epitome">Epitome for MooTools</a></p>
 		<p>Part of <a href="http://todomvc.com">TodoMVC</a></p>
 	</footer>
 	<script type="text/template" id="item-template">
 		<div class="view">
-                        <input class="toggle" type="checkbox" <%=completedCheckbox%>>
+            <input class="toggle" type="checkbox" <%=completedCheckbox%>>
 			<label><%=title%></label>
 			<button class="destroy"></button>
 		</div>
-                <input class="edit" value="<%=title%>">
+        <input class="edit" value="<%=title%>">
 	</script>
 	<script type="text/template" id="stats-template">
-                <span id="todo-count"><strong><%=remaining%></strong> item<% if (obj.remaining !== 1) { %>s<% } %> left</span>
+		<span id="todo-count"><strong><%=remaining%></strong> item<% if (obj.remaining !== 1) { %>s<% } %> left</span>
 		<ul id="filters">
 			<li>
 				<a class="selected" href="#!/">All</a>
@@ -53,16 +53,17 @@
 		<button id="clear-completed">Clear completed (<%=completed%>)</button>
 		<% } %>
 	</script>
-        <script src="../../../assets/base.js"></script>
-        <!-- mootools -->
-        <script src="js/lib/mootools-yui-compressed.js"></script>
-        <!-- epitome pre-compiled -->
-        <script src="js/lib/Epitome-min.js"></script>
-        <!-- todo app -->
-        <script src="js/models/todo-model.js"></script>
-        <script src="js/collections/todo-collection.js"></script>
+	<script src="../../../assets/base.js"></script>
+	<!-- mootools -->
+	<script src="js/lib/mootools-yui-compressed.js"></script>
+	<!-- epitome pre-compiled -->
+	<script src="js/lib/Epitome-min.js"></script>
+	<!-- todo app -->
+	<script src="js/models/todo-model.js"></script>
+	<script src="js/collections/todo-collection.js"></script>
 	<script src="js/views/todo-list.js"></script>
 	<script src="js/views/todo-main.js"></script>
+	<script src="js/controllers/todo-router.js"></script>
 	<script src="js/app.js"></script>
 </body>
 </html>
