Changes for release.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<meta name="twitter:card" content="summary">
 	<meta property="og:url" content="http://todomvc.com">
 	<meta property="og:title" content="TodoMVC">
+	<meta property="og:image" content="https://raw.github.com/addyosmani/todomvc/master/screenshot.png">
 	<meta property="og:description" content="Helping you select an MV* framework - Todo apps for Backbone.js, Ember.js, AngularJS, Spine and many more">
 	<!--[if lt IE 9]>
 	<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
