Title and credits fix for consistency

--- a/architecture-examples/yui/index.html
+++ b/architecture-examples/yui/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-	<title>YUI 3.6.0</title>
+	<title>YUI • TodoMVC</title>
 	<link rel="stylesheet" href="../../assets/base.css"/>
 </head>
 <body>
@@ -21,6 +21,10 @@
 	</section>
 	<div id="info">
 		<p>Double-click to edit a todo</p>
+        <p>Created by
+          <a href="https://github.com/clarle">Clarence Leung</a> and
+          <a href="https://twitter.com/ericf">Eric Ferraiuolo</a>
+        </p>
 		<p>Part of <a href="http://todomvc.com">TodoMVC</a></p>
 	</footer>
 
