--- a/dependency-examples/backbone_require/index.html
+++ b/dependency-examples/backbone_require/index.html
@@ -1,36 +1,29 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <title>Backbone.js</title>
-  <link rel="stylesheet" href="../../assets/base.css"/>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+	<title>Backbone.js</title>
+	<link rel="stylesheet" href="../../assets/base.css">
 	<script data-main="js/main" src="js/libs/require/require.js"></script>
 </head>
 <body>
-
-  <section id="todoapp">
-    <header id="header">
-      <h1>todos</h1>
-      <input id="new-todo" placeholder="What needs to be done?" autofocus>
-    </header>
-    <section id="main">
-      <input id="toggle-all" type="checkbox">
-      <label for="toggle-all">Mark all as complete</label>
-      <ul id="todo-list"></ul>
-    </section>
-    <footer id="footer"></div>
-  </section>
-  <div id="info">
-    <p>Double-click to edit a todo</p>
-    <p>Written by <a href="http://addyosmani.github.com/todomvc/">Addy Osmani</a></p>
-    <p>Part of <a href="http://todomvc.com">TodoMVC</a></p>
-  </footer>
-
+	<section id="todoapp">
+		<header id="header">
+			<h1>todos</h1>
+			<input id="new-todo" placeholder="What needs to be done?" autofocus>
+		</header>
+		<section id="main">
+			<input id="toggle-all" type="checkbox">
+			<label for="toggle-all">Mark all as complete</label>
+			<ul id="todo-list"></ul>
+		</section>
+		<footer id="footer"></footer>
+	</section>
+	<footer id="info">
+		<p>Double-click to edit a todo</p>
+		<p>Written by <a href="http://addyosmani.github.com/todomvc/">Addy Osmani</a></p>
+		<p>Part of <a href="http://todomvc.com">TodoMVC</a></p>
+	</footer>
 </body>
 </html>
-
-
-
-
-  
