--- a/architecture-examples/backbone/index.html
+++ b/architecture-examples/backbone/index.html
@@ -3,11 +3,13 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-	<title>Backbone.js</title>
-	<link rel="stylesheet" href="../../assets/base.css"/>
+	<title>Backbone.js • TodoMVC</title>
+	<link rel="stylesheet" href="../../assets/base.css">
+	<!--[if IE]>
+	<script src="../../assets/ie.js"></script>
+	<![endif]-->
 </head>
 <body>
-
 	<section id="todoapp">
 		<header id="header">
 			<h1>todos</h1>
@@ -22,22 +24,19 @@
 	</section>
 	<div id="info">
 		<p>Double-click to edit a todo</p>
-		<p>Written by <a href="http://addyosmani.github.com/todomvc/">Addy Osmani</a></p>
+		<p>Written by <a href="https://github.com/addyosmani">Addy Osmani</a></p>
 		<p>Part of <a href="http://todomvc.com">TodoMVC</a></p>
 	</div>
-  
-
 	<script type="text/template" id="item-template">
 		<div class="view">
-			<input class="toggle" type="checkbox" <%= completed ? 'checked="checked"' : '' %> />
+			<input class="toggle" type="checkbox" <%= completed ? 'checked' : '' %>>
 			<label><%= title %></label>
 			<button class="destroy"></button>
 		</div>
-		<input class="edit" type="text" value="<%= title %>" />
+		<input class="edit" value="<%= title %>">
 	</script>
-	
 	<script type="text/template" id="stats-template">
-		<span id="todo-count"><strong><%= remaining %></strong> <%= remaining == 1 ? 'item' : 'items' %> left</span>
+		<span id="todo-count"><strong><%= remaining %></strong> <%= remaining === 1 ? 'item' : 'items' %> left</span>
 		<ul id="filters">
 			<li>
 				<a class="selected" href="#/">All</a>
@@ -53,19 +52,16 @@
 		<button id="clear-completed">Clear completed (<%= completed %>)</button>
 		<% } %>
 	</script>
-
-  <script src="../../assets/jquery.min.js"></script>
-  <script src="js/lib/underscore-min.js"></script>
-  <script src="js/lib/backbone-min.js"></script>
-  <script src="js/lib/backbone-localstorage.js"></script>
-
-  <script src="js/init.js"></script>
-  <script src="js/models/todo.js"></script>
-  <script src="js/collections/todos.js"></script>
-  <script src="js/views/todos.js"></script>
-  <script src="js/views/app.js"></script>
-  <script src="js/routers/router.js"></script>
-  <script src="js/app.js"></script>
-
+	<script src="../../assets/jquery.min.js"></script>
+	<script src="js/lib/underscore-min.js"></script>
+	<script src="js/lib/backbone-min.js"></script>
+	<script src="js/lib/backbone-localstorage.js"></script>
+	<script src="js/init.js"></script>
+	<script src="js/models/todo.js"></script>
+	<script src="js/collections/todos.js"></script>
+	<script src="js/views/todos.js"></script>
+	<script src="js/views/app.js"></script>
+	<script src="js/routers/router.js"></script>
+	<script src="js/app.js"></script>
 </body>
 </html>
