--- a/dependency-examples/backbone_require/index.html
+++ b/dependency-examples/backbone_require/index.html
@@ -3,9 +3,13 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-	<title>Backbone.js</title>
+	<title>Backbone.js + RequireJS • TodoMVC</title>
 	<link rel="stylesheet" href="../../assets/base.css">
-	<script data-main="js/main" src="js/libs/require/require.js"></script>
+	<script src="../../assets/base.js"></script>
+	<script data-main="js/main" src="js/lib/require/require.js"></script>
+	<!--[if IE]>
+	<script src="../../assets/ie.js"></script>
+	<![endif]-->
 </head>
 <body>
 	<section id="todoapp">
