--- a/architecture-examples/knockback/index.html
+++ b/architecture-examples/knockback/index.html
@@ -20,9 +20,9 @@
 			<label for="toggle-all">Mark all as complete</label>
 			<ul id="todo-list" data-bind="foreach: todos.todos">
 				<li data-bind="css: {completed: completed, editing: editing}, visible: visible">
-					<div class="view" data-bind="event: {dblclick: onCheckEditBegin}">
+					<div class="view">
 						<input class="toggle" type="checkbox" data-bind="checked: completed" checked>
-						<label data-bind="text: title"></label>
+						<label data-bind="text: title, event: {dblclick: onCheckEditBegin}"></label>
 						<button class="destroy" data-bind="click: onDestroyTodo"></button>
 					</div>
 					<input class="edit" type="text" data-bind="value: title, selectAndFocus: editing, event: {blur: onCheckEditEnd, keyup: onCheckEditEnd}">
