--- a/labs/architecture-examples/o_O/index.html
+++ b/labs/architecture-examples/o_O/index.html
@@ -21,10 +21,10 @@
 				<label for="toggle-all">Mark all as complete</label>
 			</div>
 			<ul id="todo-list" data-bind="foreach: todos">
-				<li data-bind="class: klass; visible; dblclick: startEditing">
+				<li data-bind="class: klass; visible">
 					<div class="view">
 						<input class="toggle" type="checkbox" data-bind="value: completed">
-						<label data-bind="text: title"></label>
+						<label data-bind="text: title; dblclick: startEditing"></label>
 						<button class="destroy" data-bind="click: remove"></button>
 					</div>
 					<input class="edit" data-bind="value: title; enterKey: stopEditing; blur: stopEditing">
