--- a/labs/architecture-examples/olives/index.html
+++ b/labs/architecture-examples/olives/index.html
@@ -21,9 +21,9 @@
 			<label for="toggle-all">Mark all as complete</label>
 			<ul id="todo-list" data-model="foreach">
 				<li data-model="bind:toggleClass,completed,completed;">
-					<div class="view" data-event="listen:dblclick,startEdit">
+					<div class="view">
 						<input class="toggle" type="checkbox" data-model="bind:checked,completed">
-						<label data-model="bind:innerHTML,title"></label>
+						<label data-model="bind:innerHTML,title" data-event="listen:dblclick,startEdit"></label>
 						<button class="destroy" data-event="listen:click,remove"></button>
 					</div>
 					<input class="edit" data-model="bind:value,title" data-event="listen:keydown,stopEdit; listen:blur,stopEdit">
