--- a/labs/dependency-examples/knockoutjs_require/index.html
+++ b/labs/dependency-examples/knockoutjs_require/index.html
@@ -23,9 +23,9 @@
 			<label for="toggle-all">Mark all as complete</label>
 			<ul id="todo-list" data-bind="foreach: todos">
 				<li data-bind="css: { completed: completed, editing: editing }">
-					<div class="view" data-bind="event: { dblclick: $root.editItem }">
+					<div class="view">
 						<input class="toggle" type="checkbox" data-bind="checked: completed">
-						<label data-bind="text: title"></label>
+						<label data-bind="text: title, event: { dblclick: $root.editItem }"></label>
 						<button class="destroy" data-bind="click: $root.remove"></button>
 					</div>
 					<input class="edit" data-bind="value: title, valueUpdate: 'afterkeydown', enterKey: $root.stopEditing, selectAndFocus: editing, event: { blur: $root.stopEditing }" >
