--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 				<p>Helping you <strong>select</strong> an MV* framework</p>
 				<nav>
 					<a href="https://github.com/addyosmani/todomvc/zipball/v1.0" class="zocial red">Download (1.0)</a>
-					<a href="https://github.com/addyosmani/todomvc" class="zocial red">Watch on GitHub</a>
+					<a href="https://github.com/addyosmani/todomvc" class="zocial red">View project on GitHub</a>
 				</nav>
 			</div>
 			<div class="span4">
