Updating version number ahead of tag.

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 				<img class="logo" src="site/img/logo.svg" width="500" height="86" alt="TodoMVC">
 				<p>Helping you <strong>select</strong> an MV* framework</p>
 				<nav>
-					<a href="https://github.com/addyosmani/todomvc/zipball/v1.0" class="zocial red">Download (1.0)</a>
+					<a href="https://github.com/addyosmani/todomvc/zipball/v1.01" class="zocial red">Download (1.01)</a>
 					<a href="https://github.com/addyosmani/todomvc" class="zocial red">View project on GitHub</a>
 				</nav>
 			</div>
@@ -126,7 +126,7 @@
 		<hr>
 		<div class="row">
 			<div class="span4">
-				<h2>What's new in 1.0</h2>
+				<h2>What's new in 1.0.x</h2>
 				<ul class="whats-new">
 					<li>All main apps have been completely rewritten for consistency</li>
 					<li>Routing has been added to many of these</li>
