Separate data binding definitions from templates.

--- a/architecture-examples/dojo/index.html
+++ b/architecture-examples/dojo/index.html
@@ -39,7 +39,8 @@
 			parseOnLoad: true,
 			locale: "en",
 			paths: {
-				"dijit": "../dijit-1.8"
+				"dijit": "../dijit-1.8",
+				"todo": "../../todo"
 			},
 			deps: ["dojo/parser", "dojo/domReady!"],
 			mvc: {debugBindings: true}
