Revert "Separate data binding definitions from templates."
This reverts commit b6e14c1736a3e03b3ce711cacbd2f782977b180b.

--- a/architecture-examples/dojo/index.html
+++ b/architecture-examples/dojo/index.html
@@ -39,8 +39,7 @@
 			parseOnLoad: true,
 			locale: "en",
 			paths: {
-				"dijit": "../dijit-1.8",
-				"todo": "../../todo"
+				"dijit": "../dijit-1.8"
 			},
 			deps: ["dojo/parser", "dojo/domReady!"],
 			mvc: {debugBindings: true}
