--- a/architecture-examples/knockoutjs/index.html
+++ b/architecture-examples/knockoutjs/index.html
@@ -57,11 +57,8 @@
 			<p>Patches/fixes for cross-browser compat: <a href="http://twitter.com/addyosmani">Addy Osmani</a></p>
 		</footer>
 		<script src="../../assets/base.js"></script>
+		<script src="../../assets/director.min.js"></script>
 		<script src="js/lib/knockout.min.js"></script>
-		<!--Crossroad.js -->
-		<script src="../../assets/signals.min.js"></script>
-		<script src="../../assets/crossroads.min.js"></script>
-		<!-- / -->
 		<script src="js/app.js"></script>
 	</body>
 </html>
