Convert to using Lodash

--- a/architecture-examples/backbone/index.html
+++ b/architecture-examples/backbone/index.html
@@ -54,7 +54,7 @@
 	</script>
 	<script src="../../assets/base.js"></script>
 	<script src="../../assets/jquery.min.js"></script>
-	<script src="js/lib/underscore-min.js"></script>
+	<script src="../../assets/lodash.min.js"></script>
 	<script src="js/lib/backbone-min.js"></script>
 	<script src="js/lib/backbone-localstorage.js"></script>
 	<script src="js/models/todo.js"></script>
