--- a/architecture-examples/knockback/index.html
+++ b/architecture-examples/knockback/index.html
@@ -57,7 +57,7 @@
 	<script src="../../assets/base.js"></script>
 	<script src="../../assets/jquery.min.js"></script>
 	<!-- Knockback Dependencies -->
-	<script src="js/lib/underscore-min.js"></script>
+	<script src="../../assets/lodash.min.js"></script>
 	<script src="js/lib/backbone-min.js"></script>
 	<script src="js/lib/knockout-2.1.0.js"></script>
 	<script src="js/lib/knockback.min.js"></script>
