--- a/labs/architecture-examples/backbone.xmpp/index.html
+++ b/labs/architecture-examples/backbone.xmpp/index.html
@@ -57,7 +57,7 @@
 	</script>
 	<script src="../../../assets/base.js"></script>
 	<script src="../../../assets/jquery.min.js"></script>
-	<script src="../../../architecture-examples/backbone/js/lib/underscore-min.js"></script>
+	<script src="../../../assets/lodash.min.js"></script>
 	<script src="../../../architecture-examples/backbone/js/lib/backbone-min.js"></script>
 	<script src="js/lib/strophe.js"></script>
 	<script src="js/lib/strophe.forms.js"></script>
