--- a/labs/architecture-examples/extjs/index.html
+++ b/labs/architecture-examples/extjs/index.html
@@ -26,7 +26,7 @@
 		Updates by <a href="http://github.com/boushley">Aaron Boushley</a>
 	</div>
 	<script src="../../../assets/base.js"></script>
-	<script src="http://extjs.cachefly.net/ext-4.0.2a/bootstrap.js"></script>
+	<script src="http://cdn.sencha.com/ext-4.1.1-gpl/bootstrap.js"></script>
 	<script src="js/app.js"></script>
 </body>
 </html>
