--- a/labs/architecture-examples/backbone_marionette_modules/index.html
+++ b/labs/architecture-examples/backbone_marionette_modules/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>Marionette • TodoMVC</title>
     <link rel="stylesheet" href="../../../assets/base.css">
-    <link rel="stylesheet" href="css/custom.css">
+    <link rel="stylesheet" href="css/app.css">
     <!--[if IE]>
     <script src="../../../assets/ie.js"></script>
     <![endif]-->
@@ -47,21 +47,6 @@
       <ul id="todo-list"></ul>
     </script>
 
-    <script>
-      // Google analytics
-      var _gaq = _gaq || [];
-      _gaq.push(['_setAccount', 'UA-22728809-1']);
-      _gaq.push(['_trackPageview']);
-      (function () {
-        var ga = document.createElement('script');
-        ga.type = 'text/javascript';
-        ga.async = true;
-        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-        var s = document.getElementsByTagName('script')[0];
-        s.parentNode.insertBefore(ga, s);
-      })();
-    </script>
-
   </head>
 
   <body>
@@ -83,7 +68,7 @@
     <!-- vendor libraries -->
     <script src="../../../assets/base.js"></script>
     <script src="../../../assets/jquery.min.js"></script>
-    <script src="js/lib/underscore.js"></script>
+    <script src="../../../assets/lodash.min.js"></script>
     <script src="js/lib/backbone.js"></script>
     <script src="js/lib/backbone-localStorage.js"></script>
     <script src="js/lib/backbone.marionette.js"></script>
