--- a/labs/architecture-examples/dermis/index.html
+++ b/labs/architecture-examples/dermis/index.html
@@ -6,7 +6,7 @@
 	<title>Dermis • TodoMVC</title>
 	<link rel="stylesheet" href="../../../assets/base.css">
 	<!--[if IE]>
-	<script src="../assets/ie.js"></script>
+	<script src="../../../assets/ie.js"></script>
 	<![endif]-->
 </head>
 <body>
