Added Lab for KnockoutJS ClassBindingProvider
Implements Ryan Niemeyer's classBindingProvider in the default
KnockoutJS TodoMVC app.

--- a/index.html
+++ b/index.html
@@ -221,6 +221,9 @@
 						<a href="labs/architecture-examples/o_O/" data-source="http://weepy.github.com/o_O/" data-content="o_O: HTML binding for teh lulz: &lt;br> - Elegantly binds objects to HTML&lt;br>- Proxies through jQuery, Ender, etc&lt;br>- Automatic dependency resolution&lt;br>- Plays well with others">Funnyface.js</a>
 					</li>
 					<li>
+						<a href="labs/architecture-examples/knockoutjs_classBindingProvider/" data-source="https://github.com/rniemeyer/knockout-classBindingProvider" data-content="This project is an adaptation of /architecture-examples/knockoutjs with Ryan Niemeyer's Class Binding Provider.">Knockout + ClassBindingProvider</a>
+					</li>
+					<li>
 						<a href="labs/dependency-examples/knockoutjs_require/" data-source="http://knockoutjs.com" data-content="This project is an adaptation of /architecture-examples/knockoutjs with require.js.">Knockout + RequireJS</a>
 					</li>
 					<li>
